nurseapi/src/main/java/py/com/test/nurseapi/error/APIExceptionType.java
package py.com.test.nurseapi.error;

/**
 * @author mlopez
 * @fecha 11/29/18,2:04 PM
 */


public enum APIExceptionType {

    INTERNAL,
    SECURITY,
    COMMUNICATION,
    DATABASE,
    APPLICATION
}
